--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,7 @@ footer h3{
         font-size: 0.9em;
     }
     .projects img{
-        width: 70%;
+        width: 60%;
     }
     h1{
         font-size: 2em;
@@ -264,7 +264,113 @@ footer h3{
 
 /* laptop */
 @media screen and (min-width: 960px){
-
+    nav a, .about-me a{
+        font-size: 1.3em;
+    }
+    h1{
+        font-size: 2.2em;
+    }
+    h2{
+        font-size: 2em;
+    }
+    p{
+        font-size: 1.3em;
+    }
+    #projects h3, #skills h3, #contact h3{
+        font-size: 1.7em;
+    }
+    #skills h3, #projects h5, #contact h3{
+        padding-bottom: 60px;
+    }
+    #projects h5{
+        font-size: 1em;
+    }
+    .profile-photo img{
+        margin-left: 80px;
+        width: 65%;
+    }
+    nav h1{
+        grid-column: 1/3;
+    }
+    #about{
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 50px;
+    }
+    #about a{
+        border-radius: 15px;
+    }
+    .about-me p{
+        padding-bottom: 40px;
+    }
+    .projects img{
+        width: 52%;
+    }
+    .projects a:nth-child(1){
+        grid-row: 1;
+        grid-column: 3/7;
+        width: 80%;
+        margin-left: 60px;
+    }
+    .projects a:nth-child(2){
+        grid-row: 1;
+        grid-column: 1/4;
+        margin-top: 240px;
+        margin-left: 15px;
+    }
+    .projects a:nth-child(3){
+        grid-row: 1;
+        grid-column: 6/9;
+        margin-top: 240px;
+        margin-right: 15px;
+    }
+    .projects a:nth-child(4){
+        grid-row: 2;
+        grid-column: 3/7;
+        width: 80%;
+        margin-left: 60px;
+    }
+    .skills{
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    .skills img:nth-child(5), .skills img:nth-child(6), .skills img:nth-child(7){
+        margin-left: 17em;
+    }
+    .skills img{
+        width: 40%;
+    }
+    #contact{
+        padding-bottom: 150px;
+    }
+    #work{
+        padding-left: 70px;
+        padding-bottom: 40px;
+    }
+    #work h3{
+        font-size: 1.7em;
+    }
+    .work img{
+        width: 40%;
+        padding-bottom: 30px;
+    }
+    .weather img{
+        width: 30%;
+    }
+    .work p{
+        padding-right: 70px;
+        padding-bottom: 30px;
+    }
+    .work .tech{
+        padding-bottom: 30px;
+        display: flex;
+    }
+    .work .tech li{
+        padding-right: 20px;
+    }
+    .work .links{
+        padding-bottom: 80px;
+    }
 }
 
 /* desktop */
