--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,13 @@ footer h3{
 .work .links{
     padding-bottom: 50px;
 }
+.work .links li i{
+    padding-right: 10px;
+}
+.work .links li:nth-child(2) i{
+    margin-left: 3px;
+    padding-right: 13px;
+}
 
 /* tablet */
 @media screen and (min-width: 620px){
@@ -304,13 +311,13 @@ footer h3{
         padding-bottom: 40px;
     }
     .projects img{
-        width: 52%;
+        width: 48%;
     }
     .projects a:nth-child(1){
         grid-row: 1;
         grid-column: 3/7;
         width: 80%;
-        margin-left: 60px;
+        margin-left: 77px;
     }
     .projects a:nth-child(2){
         grid-row: 1;
@@ -328,14 +335,14 @@ footer h3{
         grid-row: 2;
         grid-column: 3/7;
         width: 80%;
-        margin-left: 60px;
+        margin-left: 77px;
     }
     .skills{
         padding-left: 50px;
         padding-right: 50px;
     }
     .skills img:nth-child(5), .skills img:nth-child(6), .skills img:nth-child(7){
-        margin-left: 17em;
+        margin-left: 15em;
     }
     .skills img{
         width: 40%;
@@ -372,8 +379,73 @@ footer h3{
         padding-bottom: 80px;
     }
 }
-
 /* desktop */
 @media screen and (min-width: 1200px){
-
+    .profile-photo img{
+        margin-left: 80px;
+        width: 50%;
+    }
+    #about{
+        padding-top: 30px;
+        padding-left: 90px;
+        margin-bottom: 100px;
+    }
+    .about-me p{
+        margin-right: 200px;
+        padding-bottom: 50px;
+    }
+    .divider{
+        grid-column: 4/7;
+        margin-right: 45px;
+    }
+    .divider img{
+        width: 70%;
+    }
+    .skills{
+        padding-left: 75px;
+        padding-right: 75px;
+    }
+    .skills img:nth-child(5), .skills img:nth-child(6), .skills img:nth-child(7){
+        margin-left: 18em;
+    }
+    .skills img{
+        width: 35%;
+    }
+    #skills{
+        padding-bottom: 70px;
+    }
+    #work{
+        padding-left: 90px;
+        padding-bottom: 60px;
+    }
+    .work img{
+        width: 30%;
+        padding-bottom: 40px;
+    }
+    .weather img{
+        width: 20%;
+    }
+    .work p{
+        padding-right: 150px;
+        padding-bottom: 40px;
+    }
+    .work .tech{
+        padding-bottom: 40px;
+    }
+    .work .tech li{
+        padding-right: 25px;
+    }
+    .work .links{
+        padding-bottom: 90px;
+    }
+}
+@media screen and (min-width: 1400px){
+    .skills img:nth-child(5), .skills img:nth-child(6), .skills img:nth-child(7){
+        margin-left: 20em;
+    }
+}
+@media screen and (min-width: 1600px){
+    .skills img:nth-child(5), .skills img:nth-child(6), .skills img:nth-child(7){
+        margin-left: 23em;
+    }
 }
