--- a/styles.css
+++ b/styles.css
@@ -190,13 +190,14 @@ footer h3{
 }
 .work .tech li{
     color: var(--link);
-    padding-right: 15px;
+    padding-right: 5px;
     font-weight: bolder;
 }
 .work p{
     padding-bottom: 20px;
 }
 .work .links{
+    font-size: smaller;
     padding-bottom: 50px;
 }
 .work .links li i{
@@ -253,6 +254,9 @@ footer h3{
     }
     .work img{
         width: 60%;
+    }
+    .work .links{
+        font-size: 1em;
     }
     .weather img{
         width: 50%;
