--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ nav li{
 .skills img:nth-child(5), .skills img:nth-child(6), .skills img:nth-child(7){
     grid-row: 2;
     margin-top: 20px;
-    margin-left: 8.5em;
+    margin-left: 6.5em;
 }
 
 #contact{
@@ -144,7 +144,7 @@ nav li{
     padding-bottom: 20px;
 }
 .contact{
-    grid-column: 3/8;
+    grid-column: 2/8;
 }
 .contact li{
     padding-bottom: 30px;
@@ -246,6 +246,9 @@ footer h3{
     }
     .skills img:nth-child(5), .skills img:nth-child(6), .skills img:nth-child(7){
         margin-left: 10em;
+    }
+    .contact{
+        grid-column: 3/8;
     }
     #work{
         padding-left: 35px;
