--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ nav li{
 .skills img:nth-child(5), .skills img:nth-child(6), .skills img:nth-child(7){
     grid-row: 2;
     margin-top: 20px;
-    margin-left: 6.5em;
+    margin-left: 5.5em;
 }
 
 #contact{
@@ -170,6 +170,7 @@ footer{
 }
 footer h3{
     margin-top: 36px;
+    font-size: smaller;
 }
 
 #work{
@@ -249,6 +250,9 @@ footer h3{
     }
     .contact{
         grid-column: 3/8;
+    }
+    footer h3{
+        font-size: 1.1em;
     }
     #work{
         padding-left: 35px;
